<resources>
    <string name="app_name">API</string>

    <string name="error_noInternet">Not connected to Internet</string>
    <string name="error_internal">No Internet connection or internal error</string>
    <string name="loading">Loading…</string>
    <string name="login_progress">Logging in, please wait...</string>
    <string name="infoUser_progress">Getting your info, please wait...</string>
    <string name="register_progress">Registering, please wait...</string>

    <string name="register_title">Register</string>
    <string name="register_button">REGISTER</string>
    <string name="register_name">Name</string>
    <string name="register_name_example">Roger</string>
    <string name="register_surname_example">García</string>
    <string name="register_surname">Surname</string>
    <string name="register_password">Password</string>
    <string name="register_repeat_password">Repeat password</string>
    <string name="register_email">E-mail</string>
    <string name="register_email_example">example@example.com</string>
    <string name="register_gender">Gender</string>
    <string name="register_birthdate">Birthdate</string>
    <string name="register_birthdate_accept">OK</string>
    <string name="register_birthdate_cancel">Cancel</string>
    <string name="register_image_descr">Profile picture</string>
    <string name="register_country">Country</string>
    <string name="register_country_example">France</string>
    <string name="register_password_not_match">Passwords do not match</string>
    <string name="register_email_not_valid">E-mail address not valid</string>
    <string name="register_date_not_valid">Date not valid</string>
    <string name="register_country_not_valid">Country not valid</string>
    <string name="register_missing_parameters">Missing parameters</string>
    <string name="register_repeated_user">User already exists</string>
    <string name="register_birthdate_selection">Select a date</string>
    <string name="register_name_required">Name is required</string>
    <string name="register_surname_required">Surname is required</string>
    <string name="register_country_required">Country is required</string>
    <string name="register_email_required">E-mail is required</string>
    <string name="register_password_required">Password is required</string>
    <string name="register_correct">Account created</string>
    <string-array name="register_gender">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>

    <string name="login_mail">E-mail</string>
    <string name="login_password">Password</string>
    <string name="login_button">LOGIN</string>
    <string name="login_register_button">Register</string>
    <string name="login_create_account"><u>Do not have any account? Create it!</u></string>
    <string name="login_server_error">Server error occurred</string>
    <string name="login_incorrect_parameters">Incorrect parameters</string>

    <string name="translator_textToTranslate">Type the text that you want to translate</string>
    <string name="translator_title">Translator</string>
    <string name="translator_textTranslated">Translated text</string>
    <string name="yandex">Powered by Yandex.Translate</string>
    <string name="translator_languageFrom">Spanish</string>
    <string name="translator_languageTo">English</string>
    <string name="translator_missingText">Text is empty</string>
    <string name="translator_invalidkey">Invalid API key</string>
    <string name="translator_blockedkey">Blocked API key</string>
    <string name="translator_limitDaily">Cannot translate more today</string>
    <string name="translator_textSize">Exceeded text size</string>
    <string name="translator_textNoTranslate">Cannot translate</string>
    <string name="translator_direction">Error in URL</string>
    <string name="button_translate">TRANSLATE</string>


    <string name="google_maps_key">AIzaSyC3tgwxB61WO2bVU_rH-LHDv-3SFrHjaU0</string>
    <string name="location_title">Location</string>
    <string name="location_filter_options"><b>Filter locations</b></string>
    <string name="location_filter_food">Food</string>
    <string name="location_filter_lodging">Lodging</string>
    <string name="location_filter_clothes">Clothes</string>
    <string name="location_filter_hygiene">Hygiene</string>
    <string name="location_filter_medicine">Medicine</string>
    <string name="location_button_apply">APPLY</string>
    <string name="location_error_occurred">An error occurred, try again later</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_filter">Filter</string>
    <string name="action_closeSession">Logout</string>
    <string name="action_search">Search</string>
    <string name="menu_location">Location</string>
    <string name="menu_chat">Chat</string>
    <string name="menu_activities">Activities</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_translator">Translator</string>
    <string name="menu_profile">Profile</string>


    <string name="health_profile_title">Health Profile</string>
    <string name="allergies_names">Allergies</string>
    <string name="diseases_names">Diseases</string>


    <string name="edit_title">Profile</string>
    <string name="edit_change_button">Change</string>
    <string name="delete_dialog_title">Delete account</string>
    <string name="edit_change_password">New password</string>
    <string name="change_password_original">Original password</string>
    <string name="edit_change_password_repeat">Repeat new password</string>
    <string name="original_password_requiered">Original password is requiered</string>
    <string name="new_password_requiered">New password is requiered</string>
    <string name="new_repeat_password_requiered">Please repeat your new password</string>
    <string name="password_not_equal_error">New password and repeated password arent equal</string>
    <string name="password_original_not_equal">Original password is wrong</string>
    <string name="edit_delete_account">Delete account</string>
    <string name="edit_delete_account_text">Are you sure you want to delete your account? This action cannot be undone.</string>
    <string name="affirmative_delete_account">Delete</string>
    <string name="negative_delete_account">Cancel</string>
    <string name="get_info_usuari">/user/</string>
    <string name="password_changed">Password changed</string>
    <string name="password_changed_error">Server error occurred</string>
    <string name="image_changed">Image changed successfully</string>

    <string name="profile_gender_title">Gender</string>
    <string name="profile_country_title">Country</string>
    <string name="profile_birthdate_title">Birthdate</string>
    <string name="profile_email_title">E-mail</string>
    <string name="profile_name_title">Name</string>
    <string name="upload_profile_picture">Uploading photo</string>
    <string name="profile_personal_title">Personal</string>
    <string name="profile_medical_title">Medical</string>


    <string name="chat_title">Chats</string>
    <string name="xat_enterMessage">Enter a message</string>
    <string name="listchats_error">Error obtaining chats</string>
    <string name="listchats_noFriends">There is nothing to show you at this time</string>
    <string name="listchats_noInternet">There is no internet connection</string>
    <string name="listchats_search">Search</string>
    <string name="listchats_accept">Accept</string>
    <string name="listchats_deny">Deny</string>
    <string name="listchats_add">Add</string>
    <string name="profile_title">Profile</string>
    <string name="profile_safeButton">Save changes</string>
    <string name="profile_errorSaving">Error saving</string>
    <string name="change_password">Change password</string>
    <string name="config_delete_account_title">Delete account</string>
    <string name="new_pass_not_equal">New and repeated password are not equal</string>
    <string name="repeated_password_required">Repeated password is required</string>
    <string name="change_password_progress">Changing password…</string>
    <string name="config_language">Language</string>
    <string name="edit_new_password">New password</string>
    <string name="change_password_button">Change password</string>
    <string name="config_title">Settings</string>
    <string name="delete_account">Deleting account…</string>
    <string name="language_spanish">Español (España)</string>
    <string name="language_catalan">Català</string>
    <string name="language_english">English (United Kingdom)</string>
    <string name="config_languages">Change language</string>
    <string name="get_other_info_usuari">Getting information</string>
    <string name="status_friendhip">Friendship</string>
    <string name="request_friendship">Request friendship</string>
    <string name="accept_friendship">Accept</string>
    <string name="sending_friendship_request">Sending request…</string>
    <string name="sending_friendship_settle">Setting friendship…</string>
    <string name="friendship_settled">SETTLED</string>
    <string name="friendship_pending">PENDING</string>
    <string name="friendship_none">NONE</string>
    <string name="friendship_to_accept">TO_ACCEPT</string>
    <string name="other_profile_tilte">Other Profile</string>
    <string name="enter_actual_password">Please enter your password</string>
    <string name="enter_new_password">Please enter your new password</string>
    <string name="listchats_cancel">Cancel</string>
    <string name="cancel_request">Cancel request</string>
    <string name="canceling_friendship">Cancelling friendship…</string>


    <string name="activity_description_tab">Description</string>
    <string name="activity_comments_tab">Comments</string>
    <string name="activity_add_calendar">Add to Calendar</string>
    <string name="activity_not_load">Could not load activity</string>
    <string name="activity_delete_comment_title">Delete comment</string>
    <string name="activity_delete_comment_description">Are you sure you want to delete this comment? This action cannot be undone.</string>
    <string name="activity_delete_button">Delete</string>
    <string name="activity_cancel_button">Cancel</string>

    <string name="list_activities_title">Activities List</string>
    <string name="list_activities_not_load">Could not load activities</string>


    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="bloodType">Blood Type</string>


    <string name="add_comment">Add a comment...</string>
    <string name="activity_comment_error">Could not post comment</string>
    <string name="activity_get_comment_error">Could not get comments</string>
    <string name="activity_example_description">Meet at: Sagrada Familia Barcelona</string>
    <string name="activity_example_hour">12:00 - 14:00</string>
    <string name="activity_example_date">25/5/2018</string>
    <string name="activity_example_title">Barcelona Tour</string>
    <string name="language_changed">Language changed</string>
    <string name="language_selected">English (United Kingdom)</string>
    <string name="Friends">Friends</string>
    <string name="Pending">Pending</string>
    <string name="Others">Others</string>
    <string name="activity">Activity</string>
    <string name="menu_about">About</string>
    <string name="about">API, Ajuda per Immigrants, is an Android App for those immigrants who have difficulties in integrating themselves socially due to differences in language, culture, education, ...\n\nThe App has been created by a group of student of the UPC, that wanted to make the world a better place.</string>

    <string name="No_info">No medical information</string>
</resources>
