<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/menu_top"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_location"
            android:icon="@drawable/ic_menu_location"
            android:title="@string/menu_location" />
        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_menu_chat"
            android:title="@string/menu_chat" />
        <item
            android:id="@+id/nav_translator"
            android:icon="@drawable/ic_menu_translator"
            android:title="@string/menu_translator" />
        <item
            android:id="@+id/nav_activities"
            android:icon="@drawable/ic_menu_activities"
            android:title="@string/menu_activities" />
    </group>
    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_profile"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_stat_about"
            android:title="@string/menu_about" />
    </group>
</menu>
