<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:layout_gravity="center"
    android:background="@drawable/custom_dialog">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/location_title_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/location_filter_options"
            android:textColor="@color/colorTitle"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="30dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location_filter_food"
                    android:textSize="15sp" />

                <CheckBox
                    android:id="@+id/location_check_food"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:buttonTint="@color/colorPrimary"
                    android:checked="true" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location_filter_lodging"
                    android:textSize="15sp" />

                <CheckBox
                    android:id="@+id/location_check_lodging"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:buttonTint="@color/colorPrimary"
                    android:checked="true" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location_filter_clothes"
                    android:textSize="15sp" />

                <CheckBox
                    android:id="@+id/location_check_clothes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:buttonTint="@color/colorPrimary"
                    android:checked="true" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location_filter_hygiene"
                    android:textSize="15sp" />

                <CheckBox
                    android:id="@+id/location_check_hygiene"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:buttonTint="@color/colorPrimary"
                    android:checked="true" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location_filter_medicine"
                    android:textSize="15sp" />

                <CheckBox
                    android:id="@+id/location_check_medicine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:buttonTint="@color/colorPrimary"
                    android:checked="true" />

            </LinearLayout>
        </LinearLayout>

        <android.support.v7.widget.CardView
            android:id="@+id/location_button_dialog"
            android:layout_width="160dp"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:foreground="?android:selectableItemBackground"
            app:cardBackgroundColor="@color/colorPrimary"
            app:cardCornerRadius="10dp"
            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/location_button_apply"
                    android:textColor="@color/colorButtons"
                    android:textSize="16sp"
                    android:textStyle="bold"/>
            </RelativeLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>

</RelativeLayout>